--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -4,9 +4,9 @@ pipeline {
             label 'worker' 
         }
    }
-   environment {
-     BRANCH_NAME = "${GIT_BRANCH.split("/")[1]}"
-  }
+  //  environment {
+  //    BRANCH_NAME = "${GIT_BRANCH.split("/")[1]}"
+  // }
 
     stages {
         stage('Docker login') {
@@ -21,13 +21,13 @@ pipeline {
                 sh 'docker build -t terraform .'
             }
         }
-        stage('Docker tag and push') {
-            steps {
-                sh """
-                    docker tag terraform denisvoznik/terraform-dz:${BRANCH_NAME}
-                    docker push denisvoznik/terraform-dz:${BRANCH_NAME}
-                """
-            }
-        }
+        // stage('Docker tag and push') {
+        //     steps {
+        //         sh """
+        //             docker tag terraform denisvoznik/terraform-dz:${BRANCH_NAME}
+        //             docker push denisvoznik/terraform-dz:${BRANCH_NAME}
+        //         """
+        //     }
+        // }
     }
 }
