--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -4,11 +4,8 @@ pipeline {
             label 'worker' 
         }
    }
-  //  environment {
-  //    BRANCH_NAME = "${GIT_BRANCH.split("/")[1]}"
-  // }
 
-    stages {
+   stages {
         stage('Docker login') {
              steps {
                 withCredentials([usernamePassword(credentialsId: 'dockerHubCreds', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_TOKEN')]) {
@@ -21,13 +18,13 @@ pipeline {
                 sh 'docker build -t terraform .'
             }
         }
-        // stage('Docker tag and push') {
-        //     steps {
-        //         sh """
-        //             docker tag terraform denisvoznik/terraform-dz:${BRANCH_NAME}
-        //             docker push denisvoznik/terraform-dz:${BRANCH_NAME}
-        //         """
-        //     }
-        // }
+        stage('Docker tag and push') {
+            steps {
+                sh """
+                    docker tag terraform denisvoznik/terraform-dz:${env.BRANCH_NAME}
+                    docker push denisvoznik/terraform-dz:${env.BRANCH_NAME}
+                """
+            }
+        }
     }
 }
