--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -27,4 +27,12 @@ pipeline {
             }
         }
     }
+    post { 
+        success { 
+            echo 'Success!'
+        }
+        failure {
+            echo 'Failure!'
+        }
+    }
 }
